--- a/index.html
+++ b/index.html
@@ -86,13 +86,11 @@
 
 <footer>
   <div>
-    <div width="20px">
-      <h4 class="design">Design created by Thomas Tovey</h4>
-    </div>
-    <div width="80%" style="margin-top: -50px;">
-      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link"></a>
-      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link-add"></a>
-      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-add"></a>
+      <p class="design">Design created by Thomas Tovey</p>
+    <div style="margin-left:20%; margin-right: 20%; text-align: center;">
+      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link-start"></a>
+      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
+      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
   </div>
 </footer>
