--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@
 </body>
 
 <footer>
-  <div class="design">
-      <p>Design created by Thomas Tovey</p>
-   </div> 
     <div style="margin-left:20%; margin-right: 20%; text-align: center;">
+      <p class="design">Design created by Thomas Tovey</p>
       <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link-start"></a>
       <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
       <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
