--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 
         <div class="knowledge-imgs-container">
           <img class="knowledge-img" src="./images/skills/python.png" title="Python">
-          <img class="knowledge-img" src="./images/skills/html5.png" title="HTML 5">
-          <img class="knowledge-img" src="./images/skills/css3.png" title="CSS 3">
-          <img class="knowledge-img" src="./images/skills/bootstrap.png" title="Bootstrap">
-          <img class="knowledge-img" src="./images/skills/mysql.png" title="MySQL">
+          <img class="knowledge-img" src="./images/skills/pandas.png" title="Pandas">
+          <img class="knowledge-img" src="./images/skills/selenium.png" title= "Selenium">
           <img class="knowledge-img" src="./images/skills/flask.png" title="Flask">
+          <img class="knowledge-img" src="./images/skills/bootstrap.png" title="Bootstrap">
           <img class="knowledge-img" src="./images/skills/matplotlib.png" title="MatPlotLib">
           <img class="knowledge-img" src="./images/skills/numpy.png" title="NumPy">
-          <img class="knowledge-img" src="./images/skills/pandas.png" title="Pandas">
           <img class="knowledge-img" src="./images/skills/ploty.png" title="Ploty">
-          <img class="knowledge-img" src="./images/skills/selenium.png" title= "Selenium">
           <img class="knowledge-img" src="./images/skills/sqlite.png" title="SQLite">
+          <img class="knowledge-img" src="./images/skills/mysql.png" title="MySQL">
+          <img class="knowledge-img" src="./images/skills/html5.png" title="HTML 5">
+          <img class="knowledge-img" src="./images/skills/css3.png" title="CSS 3">
           <br>
         </div>
       </div>
@@ -80,11 +80,10 @@
 </body>
 
 <footer>
-    <div style="margin-left:20%; margin-right: 20%; text-align: center;">
+    <div class="footer-content">
       <p class="design">Design created by Thomas Tovey</p>
       <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link-start"></a>
       <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
       <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
 </footer>
-
