--- a/about.html
+++ b/about.html
@@ -9,8 +9,6 @@
     </head>
 </html>
 
-<!-- TODO 1: Fix page formating on smaller screens -->
-
 <body>
   <div>
       <div id="mySidenav" class="sidenav">
@@ -36,19 +34,18 @@
       </div>
 
   <div class="button-container">
-    <!-- <button style="font-size: 25px; color:black;">Download CV</button> -->
     <a class="download_button" href="#" download="Thomas Tovey-CV.pdf">Download CV</a>
   </div>
   <div class="cv-container">
     <hr>
-    <h2 style="margin-left: 36vw; color: white;">Thomas Tovey</h2>
-    <p style="margin-left: 3%; margin-right: 3%; color: white; text-align: center; text-indent: 20px; font-size: 20px;">
+    <h2 class="section-title">Thomas Tovey</h2>
+    <p class="cv-p">
     I am a professional, results-focused person who enjoys new challenges and solving 
     problems. I am looking for a role that will stretch my knowledge and allow me to learn 
     new skills whilst improving my understanding of the skills I already have.
     </p>
     <hr>
-    <h2 style="color: white; margin-left: 37.5vw;"><u>Education</u></h2>
+    <h2 class="section-title"><u>Education</u></h2>
     <p class="education">
       -Staffordshire University [3D Games Design (MEng)], 2013 to Summer 2017-
     </p>
@@ -59,7 +56,7 @@
       -The Ridings High School, 2005 to Summer 2009-
     </p>
     <hr>
-    <h2 style="margin-left: 35vw; color: white;"><u>Employment History</u></h2>
+    <h2 class="section-title"><u>Employment History</u></h2>
     <p class="role">
     <u>Team Manager</u>
     <br> Argos Bristol LFC (May 2021-March 2025)
@@ -115,9 +112,9 @@
     Colleague & Team Leader (October 2012-September 2019)
     </p>
     <hr>
-    <h2 style="margin-left: 40vw; color: white;"><u>Skills</u></h2>
+    <h2 class="section-title"><u>Skills</u></h2>
     <hr>
-    <h2 style="margin-left: 38vw; color: white;"><u>Volunteering</u></h2>
+    <h2 class="section-title"><u>Volunteering</u></h2>
     <p class="role">
     <u>Scout Leader (2012-Present)</u>
     </p>
@@ -135,14 +132,10 @@
 </body>
 
 <footer>
-  <div>
-    <div width="20px">
-      <h4 class="design">Design created by Thomas Tovey</h4>
+    <div class="footer-content">
+      <p class="design">Design created by Thomas Tovey</p>
+      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link-start"></a>
+      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
+      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
-    <div width="80%" style="margin-top: -50px;">
-      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link"></a>
-      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link-add"></a>
-      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-add"></a>
-    </div>
-  </div>
 </footer>
