--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
       </div>
 
   <div class="button-container">
+    <!-- <button style="font-size: 25px; color:black;">Download CV</button> -->
     <a class="download_button" href="#" download="Thomas Tovey-CV.pdf">Download CV</a>
   </div>
   <div class="cv-container">
@@ -90,10 +91,14 @@
     <li class="job-list">
     A tool to collate various reports available to us from the 
     company and automatically generate monthly and yearly 
-    colleague performance reports from them. -Automating various processes in tools provided to us by the 
+    colleague performance reports from them.
+    </li>.
+    <br>
+    <li class="job-list">
+    Automating various processes in tools provided to us by the 
     company where previously the data had to be input manually 
     multiple times a day.
-    </li>.
+    </li>
     <br>
     <p class="cv-p">
     I was also responsible for auditing our weekly delivery 
