--- a/about.html
+++ b/about.html
@@ -34,8 +34,7 @@
       </div>
 
   <div class="button-container">
-    <!-- <button style="font-size: 25px; color:black;">Download CV</button> -->
-    <a class="download_button" href="#" download="Thomas Tovey-CV.pdf">Download CV</a>
+    <a class="download_button" href="./files/Thomas Tovey CV.pdf" download="Thomas Tovey-CV.pdf">Download CV</a>
   </div>
   <div class="cv-container">
     <hr>
@@ -144,3 +143,4 @@
       <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
 </footer>
+
