--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,6 @@
     </head>
 </html>
 
-<!-- TODO 1: Fix page formating on smaller screens -->
-
 <body>
   <div>
       <div id="mySidenav" class="sidenav">
@@ -38,14 +36,10 @@
 </body>
 
 <footer>
-  <div>
-    <div width="20px">
-      <h4 class="design">Design created by Thomas Tovey</h4>
+    <div class="footer-content">
+      <p class="design">Design created by Thomas Tovey</p>
+      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link-start"></a>
+      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
+      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
-    <div width="80%" style="margin-top: -50px;">
-      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link"></a>
-      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link-add"></a>
-      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-add"></a>
-    </div>
-  </div>
 </footer>
