Update index footer to open in new tabs.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 <footer>
     <div class="footer-content">
       <p class="design">Design created by Thomas Tovey</p>
-      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link-start"></a>
-      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
-      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-end"></a>
+      <a href="https://github.com/THJT-9" target="_blank" rel="noopener noreferrer"><img src="./images/github_logo.png" class="footer-link-start"></a>
+      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109" target="_blank" rel="noopener noreferrer"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
+      <a href="mailto:thomastovey3d@gmail.com" ><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
 </footer>
