Update projects footer links & columns

--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,6 @@
     </head>
 </html>
 
-<!-- TODO 1: Fix page formating on smaller screens -->
-
 <body>
   <div>
       <div id="mySidenav" class="sidenav">
@@ -34,9 +32,9 @@
           }
         </script>
       </div>
-
+      <!-- Projects 1&2 -->
       <div class="project-container">
-        <div class="project-bg">
+        <div class="column1">
           <a href="https://github.com/THJT-9/Text-to-Morse-Code-Generator" target="_blank" rel="noopener noreferrer">
             <img class="project-img" src="./images/morse-code.png">
           </a>
@@ -61,8 +59,7 @@
           </p>
             <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
         </div>
-        <div class="project-container" style="margin-left:1050px; margin-top: -755px; width: 40vw;">
-        <div class="project-bg">
+        <div class="column2">
           <a href="#" target="_blank" rel="noopener noreferrer">
             <img class="project-img" src="./images/projects placeholder.png">
           </a>
@@ -90,17 +87,71 @@
             <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
         </div>
       </div>
+      <!-- Projects 3&4 -->
+      <div class="project-container">
+        <div class="column1">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <img class="project-img" src="./images/projects placeholder.png">
+          </a>
+          <p class="project-name"><u>Portfolio Project 3</u></p>
+          <p class="project-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p class="features">
+            Features include:
+          </p>
+          <li class="features-list">
+            Feature 1
+          </li>
+          <li class="features-list">
+            Feature 2 
+          </li>
+          <li class="features-list">
+            Feature 3
+          </li>
+          <p class="project-langs">
+            <u>Languages Used</u>
+          </p>
+            <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
+        </div>
+        <div class="column2">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <img class="project-img" src="./images/projects placeholder.png">
+          </a>
+          <p class="project-name"><u>Portfolio Project 4</u></p>
+          <p class="project-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p class="features">
+            Features include:
+          </p>
+          <li class="features-list">
+            Feature 1
+          </li>
+          <li class="features-list">
+            Feature 2 
+          </li>
+          <li class="features-list">
+            Feature 3
+          </li>
+          <p class="project-langs">
+            <u>Languages Used</u>
+          </p>
+            <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
+        </div>
+      </div>
+
 </body>
 
 <footer>
-  <div>
-    <div width="20px">
-      <h4 class="design">Design created by Thomas Tovey</h4>
+    <div class="footer-content">
+      <p class="design">Design created by Thomas Tovey</p>
+      <a href="https://github.com/THJT-9" target="_blank" rel="noopener noreferrer"><img src="./images/github_logo.png" class="footer-link-start"></a>
+      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109" target="_blank" rel="noopener noreferrer"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
+      <a href="mailto:thomastovey3d@gmail.com" ><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
-    <div width="80%" style="margin-top: -50px;">
-      <a href="https://github.com/THJT-9"><img src="./images/github_logo.png" class="footer-link"></a>
-      <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109"><img src="./images/linkedin_logo_bw.png" class="footer-link-add"></a>
-      <a href="mailto:thomastovey3d@gmail.com"><img src="./images/contact_button.png" class="footer-link-add"></a>
-    </div>
-  </div>
 </footer>
