--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,14 @@
           }
         </script>
       </div>
-      <!-- Projects 1&2 -->
+      
+      <div class="carosel">
+        <h1 style="text-align: center; color: white;">Insert Featured Projects Carousel Here</h1>
+        
+      </div>
+      <!-- Projects 1-3 -->
       <div class="project-container">
-        <div class="column1">
+        <div id= "project1" class="column1">
           <a href="https://github.com/THJT-9/Text-to-Morse-Code-Generator" target="_blank" rel="noopener noreferrer">
             <img class="project-img" src="./images/morse-code.png">
           </a>
@@ -59,7 +64,7 @@
           </p>
             <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
         </div>
-        <div class="column2">
+        <div id="project2" class="column2">
           <a href="#" target="_blank" rel="noopener noreferrer">
             <img class="project-img" src="./images/projects placeholder.png">
           </a>
@@ -86,10 +91,7 @@
           </p>
             <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
         </div>
-      </div>
-      <!-- Projects 3&4 -->
-      <div class="project-container">
-        <div class="column1">
+        <div id="project3" class="column3">
           <a href="#" target="_blank" rel="noopener noreferrer">
             <img class="project-img" src="./images/projects placeholder.png">
           </a>
@@ -116,11 +118,68 @@
           </p>
             <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
         </div>
-        <div class="column2">
+      </div>
+      <!-- Projects 4-6 -->
+      <div id="project4" class="project-container">
+        <div class="column1">
           <a href="#" target="_blank" rel="noopener noreferrer">
             <img class="project-img" src="./images/projects placeholder.png">
           </a>
           <p class="project-name"><u>Portfolio Project 4</u></p>
+          <p class="project-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p class="features">
+            Features include:
+          </p>
+          <li class="features-list">
+            Feature 1
+          </li>
+          <li class="features-list">
+            Feature 2 
+          </li>
+          <li class="features-list">
+            Feature 3
+          </li>
+          <p class="project-langs">
+            <u>Languages Used</u>
+          </p>
+            <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
+        </div>
+        <div id="project5" class="column2">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <img class="project-img" src="./images/projects placeholder.png">
+          </a>
+          <p class="project-name"><u>Portfolio Project 5</u></p>
+          <p class="project-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p class="features">
+            Features include:
+          </p>
+          <li class="features-list">
+            Feature 1
+          </li>
+          <li class="features-list">
+            Feature 2 
+          </li>
+          <li class="features-list">
+            Feature 3
+          </li>
+          <p class="project-langs">
+            <u>Languages Used</u>
+          </p>
+            <img  class="knowledge-img" style="height: 50px; width: 50px;" src="./images/skills/python.png">
+        </div>
+        <div id="project6" class="column3">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <img class="project-img" src="./images/projects placeholder.png">
+          </a>
+          <p class="project-name"><u>Portfolio Project 6</u></p>
           <p class="project-desc">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
