--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </head>
 </html>
 
+<!-- TODO 1: Get changing text to use typing style animation -->
+
 <body class="body_bg">
   <div>
       <div id="mySidenav" class="sidenav">
@@ -43,7 +45,7 @@
 
     <div class="text-change-container">
       <div class="text-changer">
-        <p class="coding-language">Python |</p>
+        <!--<p class="coding-language">Python |</p>-->
         <div class="text"></div>
       </div>
     </div>
