--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <meta name="viewport" content="width=device-width, initital-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/base_style.css">
         <link rel="stylesheet" type="text/css" href="./css/index_style.css">
+        <link rel="stylesheet" type="text/css" href="./css/scrolling_banner_style.css">
     </head>
 </html>
-
-<!-- TODO 1: Get changing text to use typing style animation -->
 
 <body class="body_bg">
   <div>
@@ -34,6 +33,14 @@
           }
         </script>
       </div>
+
+  <div class="scrolling-banner-container">
+    <div class="scrolling-banner-inner" style="--marquee-speed: 30s; --effect:scroll-effect" role="marquee">
+        <div class="scrolling-text">
+            <div class="scrolling-text-item">NEW PYTHON PROJECT ADDED: Morse Code Encoder/Decoder</div>
+        </div>
+    </div>
+  </div>
 
     <div class="profile-container">
       <img class="profile" src="./images/profile.png" title="Thomas Tovey">
