--- a/projects.html
+++ b/projects.html
@@ -27,26 +27,25 @@
   
   <div class="carousel-container" style="width: 84%; margin-top: 30px; margin-left: 8%">
     <div class="slideshow-container" style="text-align: center;">
-
       <div class="mySlides fade">
         <a href="#project1" rel="noopener noreferrer">
-          <img src="./images/featured.png" style="width: 100%; height: 450px;">
+          <img src="./images/morse-code-featured-cover.png" style="width: 100%; height: 450px;">
       </div>
 
       <div class="mySlides fade">
         <a href="#project2" rel="noopener noreferrer">
-          <img src="./images/featured.png" style="width: 100%; height: 450px;">
+          <img src="./images/featured_placeholder.png" style="width: 100%; height: 450px;">
         </a>
       </div>
 
       <div class="mySlides fade">
         <a href="#project6" rel="noopener noreferrer">
-          <img src="./images/featured.png" style="width: 100%; height: 450px;">
+          <img src="./images/featured_placeholder.png" style="width: 100%; height: 450px;">
         </a>
       </div>
 
-      <a class="prev" style="font-size: 50px; left: 0%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 0px;" onclick="plusSlides(-1)">❮</a>
-      <a class="next" style="font-size: 50px; right: 0%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 0px;" onclick="plusSlides(1)">❯</a>
+      <a class="prev" style="font-size: 50px; left: 0%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 5px 0px 0px 5px;" onclick="plusSlides(-1)">❮</a>
+      <a class="next" style="font-size: 50px; right: 0%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 0px 5px 5px 0px;" onclick="plusSlides(1)">❯</a>
       <br>
 
     </div>
@@ -63,13 +62,13 @@
 
           <div class="p1mySlides fade">
             <a href="https://github.com/THJT-9/Text-to-Morse-Code-Generator" target="_blank" rel="noopener noreferrer">
-              <img src="./images/morse-code.png" style="border: 2px solid white; border-radius: 15px; background-color: white;">
+              <img src="./images/morse-code-project-cover.png" style="border: 2px solid white; border-radius: 15px; background-color: white;">
             </a>
           </div>
 
           <div class="p1mySlides fade">
             <a href="https://github.com/THJT-9/Text-to-Morse-Code-Generator" target="_blank" rel="noopener noreferrer">
-              <img src="./images/projects placeholder.png" style="border: 2px solid white; border-radius: 15px; background-color: white;">
+              <img src="./images/morse-code.png" style="border: 2px solid white; border-radius: 15px; background-color: white;">
             </a>
           </div>
 
