--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
       <span class="span-menu" onclick="openNav()"><img src="./images/menu_button.png" class="menu-button"> Menu</span>
     </div>
   </div>
-  
+  <div style="width: 100%";>
   <div class="carousel-container" style="width: 84%; margin-top: 30px; margin-left: 8%">
     <div class="slideshow-container" style="text-align: center;">
       <div class="mySlides fade">
@@ -53,6 +53,7 @@
   </div>
    <div style="width: 85%; margin-left: 7.5%;">
       <hr>
+  </div>
   </div>
 
   <!-- Projects 1-3 -->
@@ -620,4 +621,5 @@
     p6dots[p6slideIndex-1].className += " active";
   }
 </script>
+
 
