--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Thomas Tovey - Portfolio</title>
-    <meta name="viewport" content="width=device-width, initital-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/base_style.css">
     <link rel="stylesheet" type="text/css" href="./css/projects_style.css">
     <link rel="stylesheet" type="text/css" href="./css/carousel_style.css">
@@ -24,14 +24,14 @@
       <span class="span-menu" onclick="openNav()"><img src="./images/menu_button.png" class="menu-button"> Menu</span>
     </div>
   </div>
-  <div style="width: 100%";>
+  
   <div class="carousel-container" style="width: 84%; margin-top: 30px; margin-left: 8%">
     <div class="slideshow-container" style="text-align: center;">
       <div class="mySlides fade">
         <a href="#project1" rel="noopener noreferrer">
-          <img src="./images/morse-code-featured-cover.png" style="width: 100%; height: 450px;">
+          <img src="./images/morse-code-featured-cover.png" style="width: 1950px; height: 450px; text-align: center;">
         </a>
-      </div>
+        </div>
 
       <div class="mySlides fade">
         <a href="#project2" rel="noopener noreferrer">
@@ -45,15 +45,14 @@
         </a>
       </div>
 
-      <a class="prev" style="font-size: 50px; left: 0%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 5px 0px 0px 5px;" onclick="plusSlides(-1)">❮</a>
-      <a class="next" style="font-size: 50px; right: 0%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 0px 5px 5px 0px;" onclick="plusSlides(1)">❯</a>
+      <a class="prev" style="font-size: 50px; left: 0.5%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 5px 0px 0px 5px;" onclick="plusSlides(-1)">❮</a>
+      <a class="next" style="font-size: 50px; right: 0.6%; top: 0%; padding: 200px 10px 184px; margin-top: 0px; border-radius: 0px 5px 5px 0px;" onclick="plusSlides(1)">❯</a>
       <br>
 
     </div>
   </div>
    <div style="width: 85%; margin-left: 7.5%;">
       <hr>
-  </div>
   </div>
 
   <!-- Projects 1-3 -->
@@ -621,5 +620,3 @@
     p6dots[p6slideIndex-1].className += " active";
   }
 </script>
-
-
