--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     <div class="slideshow-container" style="text-align: center;">
       <div class="mySlides fade">
         <a href="#project1" rel="noopener noreferrer">
-          <img src="./images/morse-code-featured-cover.png" style="width: 1950px; height: 450px; text-align: center;">
+          <img src="./images/morse-code-featured-cover.png" style="width: 100%; height: 450px;">
         </a>
         </div>
 
