--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Thomas Tovey - Portfolio</title>
-        <meta name="viewport" content="width=device-width, initital-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/base_style.css">
         <link rel="stylesheet" type="text/css" href="./css/index_style.css">
         <link rel="stylesheet" type="text/css" href="./css/scrolling_banner_style.css">
@@ -11,7 +11,6 @@
 </html>
 
 <body class="body_bg">
-  <div>
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="javascript:void(0)" style="background-color: lightgray; color: black;"><img src="./images/home_button.png" class="nav-button"> Home</a>
@@ -41,7 +40,7 @@
         </div>
     </div>
   </div>
-
+  <div class="content-container">
     <div class="profile-container">
       <img class="profile" src="./images/profile.png" title="Thomas Tovey">
     </div>
@@ -84,7 +83,6 @@
         <hr>
       </div>
     </div>
-
   </div>
 </body>
 
