--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Thomas Tovey - Portfolio</title>
-        <meta name="viewport" content="width=device-width, initital-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/base_style.css">
         <link rel="stylesheet" type="text/css" href="./css/contact_style.css">
     </head>
@@ -32,7 +32,7 @@
           }
         </script>
       </div>
-
+  </div>
 </body>
 
 <footer>
