--- a/about.html
+++ b/about.html
@@ -43,9 +43,16 @@
         problems. I am looking for a role that will stretch my knowledge and allow me to learn
         new skills whilst improving my understanding of the skills I already have.
         </p>
+        <p class="cv-p" style="text-align: center;">
+        Since leaving my role at Argos in March 2025, I have been focusing on upskilling and 
+        transitioning my skills from Excel-based coding to a primarily Python-based skillset with 
+        knowledge on SQL, HTML, CSS etc and the ability to integrate them all with each other.
+        </p>
         <hr>
         <h2 class="section-title"><u>Education</u></h2>
         <p class="education">
+          -Self taught Python, HTML, CSS & SQL via UDEMY, March 2025-Current-
+          </p>
           -Staffordshire University [3D Games Design (MEng)], 2013 to Summer 2017-
         </p>
         <p class="education">
@@ -118,6 +125,29 @@
         </p>
         <hr>
         <h2 class="section-title"><u>Skills</u></h2>
+        <div class="skills-container">
+        <div class="column">
+          <ul>
+            <li class="job-list">Problem-Solving</li>
+            <li class="job-list">Team-work</li>
+            <li class="job-list">Analytical</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul style="list-style-position: inside;">
+            <li class="job-list">Creative</li>
+            <li class="job-list">Quick-Learning</li>
+            <li class="job-list">Logic-Focused</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul>
+            <li class="job-list">Problem-Solving</li>
+            <li class="job-list">Team-work</li>
+            <li class="job-list">Analytical</li>
+          </ul>
+        </div>
+        </div>
         <hr>
         <h2 class="section-title"><u>Volunteering</u></h2>
         <p class="role">
@@ -144,4 +174,5 @@
       <a href="https://uk.linkedin.com/in/thomas-tovey-b6545b109" target="_blank" rel="noopener noreferrer"><img src="./images/linkedin_logo_bw.png" class="footer-link"></a>
       <a href="mailto:thomastovey3d@gmail.com" ><img src="./images/contact_button.png" class="footer-link-end"></a>
     </div>
+
 </footer>
