--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
       <hr>
     </div>
 
-    <!-- Projects 1-3 -->
+        <!-- Projects 1-3 -->
     <div class="project-container" style="margin-top: 30px;">
       <div id= "project1" class="column1">
         <div class="carousel-container">
@@ -74,19 +74,13 @@
               </a>
             </div>
 
-            <div class="p1mySlides fade">
-              <a href="https://github.com/THJT-9/Text-to-Morse-Code-Generator" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
-              </a>
-            </div>
-
             <a class="prev" onclick="p1plusSlides(-1)">❮</a>
             <a class="next" onclick="p1plusSlides(1)">❯</a>
             <br>
             <div style="text-align:center">
               <span class="p1dot" onclick="p1currentSlide(1)"></span> 
               <span class="p1dot" onclick="p1currentSlide(2)"></span> 
-              <span class="p1dot" onclick="p1currentSlide(3)"></span> 
+
             </div>
 
           </div>
@@ -120,20 +114,20 @@
           <div class="slideshow-container">
 
             <div class="p2mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
+              <a href="https://github.com/THJT-9/Tic-Tac-Toe-Noughts-Crosses" target="_blank" rel="noopener noreferrer">
+                <img src="./images/noughts-crosses-project-cover.png" class="project-img">
               </a>
             </div>
 
             <div class="p2mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
+              <a href="https://github.com/THJT-9/Tic-Tac-Toe-Noughts-Crosses" target="_blank" rel="noopener noreferrer">
+                <img src="./images/noughts-crosses-features-1.png" class="project-img">
               </a>
             </div>
 
             <div class="p2mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
+              <a href="https://github.com/THJT-9/Tic-Tac-Toe-Noughts-Crosses" target="_blank" rel="noopener noreferrer">
+                <img src="./images/noughts-crosses-features-2.png" class="project-img">
               </a>
             </div>
 
@@ -148,24 +142,23 @@
 
           </div>
         </div>
-        <p class="project-name"><u>Portfolio Project 2</u></p>
+        <p class="project-name"><u>Noughts & Crosses</u></p>
         <p class="project-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          A text-based game of Noughts and Crosses (also known as Tic-Tac-Toe). It features 1 
+          or 2-player modes, with a full ai opponent, as well as scoreboards, alternating turns
+           and a coin flip for the first round.
         <p class="features">
           Features include:
         </p>
         <ul>
           <li class="features">
-            Feature 1 description description description.
+            Full AI Opponent, who will actively attempt to win the game.
           </li>
           <li class="features">
-            Feature 2 description description description.
+            Both 1 and 2-Player modes.
           </li>
           <li class="features">
-            Feature 3 description description description.
+            Seperate, dynamic scoreboards for both 1 and 2-player modes.
           </li>
         </ul>
         <p class="project-langs">
@@ -180,19 +173,13 @@
 
             <div class="p3mySlides fade">
               <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
+                <img src="./images/flight-finder-project-cover.png" class="project-img">
               </a>
             </div>
 
             <div class="p3mySlides fade">
               <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
-              </a>
-            </div>
-
-            <div class="p3mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                <img src="./images/projects placeholder.png" class="project-img">
+                <img src="./images/flight-finder-features-1.png" class="project-img">
               </a>
             </div>
 
@@ -202,29 +189,28 @@
             <div style="text-align:center">
               <span class="p3dot" onclick="p3currentSlide(1)"></span> 
               <span class="p3dot" onclick="p3currentSlide(2)"></span> 
-              <span class="p3dot" onclick="p3currentSlide(3)"></span> 
             </div>
 
           </div>
         </div>
-        <p class="project-name"><u>Portfolio Project 3</u></p>
+        <p class="project-name"><u>Cheap Flight-Finder</u></p>
         <p class="project-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          A tool that will check for flight prices within a certain period of time, to and 
+          from a chosen destination, and see if they are cheaper than your chosen price. 
+          If so, it will then message you to let you know a cheap flight is avaliable, along with
+          letting you know the departure time, arrival time, date and departure and landing airports.
         <p class="features">
           Features include:
         </p>
         <ul>
           <li class="features">
-            Feature 1 description description description.
+            API and Google sheets integration.
           </li>
           <li class="features">
-            Feature 2 description description description.
+            Whatsapp Messaging.
           </li>
           <li class="features">
-            Feature 3 description description description.
+            Can be set up to run on a timer.
           </li>
         </ul>
         <p class="project-langs">
@@ -634,4 +620,5 @@
     p6slides[p6slideIndex-1].style.display = "block";  
     p6dots[p6slideIndex-1].className += " active";
   }
+
 </script>
