--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
       <hr>
     </div>
 
-        <!-- Projects 1-3 -->
+    <!-- Projects 1-3 -->
     <div class="project-container" style="margin-top: 30px;">
       <div id= "project1" class="column1">
         <div class="carousel-container">
@@ -227,19 +227,19 @@
           <div class="slideshow-container">
 
             <div class="p4mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/WatermarkingApp" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
 
             <div class="p4mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/WatermarkingApp" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
 
             <div class="p4mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/WatermarkingApp" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
@@ -255,24 +255,29 @@
 
           </div>
         </div>
-        <p class="project-name"><u>Portfolio Project 4</u></p>
+        <p class="project-name"><u>Watermark App</u></p>
         <p class="project-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          A program that allows the user to add a Watermark to their images. They can add the Watermark to one or mutliple images,
+          as well as individually tweak the settings for each watermark on an image-by-image basis if they wish.
+          Options for editing the watermark include:
+          -Position (Up/Down/Left/Right)
+          -Transparency
+          -Scale
+          -Rotation
+          -Text or Image based Watermark.
+
         <p class="features">
           Features include:
         </p>
        <ul>
           <li class="features">
-            Feature 1 description description description.
+            Ability to apply a Watermark to multiple images at once.
           </li>
           <li class="features">
-            Feature 2 description description description.
+            Automatic resizing the fit the different sizes of each potential image.
           </li>
           <li class="features">
-            Feature 3 description description description.
+            Mutliple options to customise the Watermark on a per-image basis.
           </li>
         </ul>
         <p class="project-langs">
@@ -286,19 +291,19 @@
           <div class="slideshow-container">
 
             <div class="p5mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/Typing-Text-Speed-Test" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
 
             <div class="p5mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/Typing-Text-Speed-Test" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
 
             <div class="p5mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/Typing-Text-Speed-Test" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
@@ -313,24 +318,27 @@
             </div>
           </div>
         </div>
-        <p class="project-name"><u>Portfolio Project 5</u></p>
+        <p class="project-name"><u>Typing Speed Test App</u></p>
         <p class="project-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          An app to test how fast you can type. The app gives you the option to choose between 
+          typing words, sentances and paragraphs, and the words change colour depending on whether
+          you spelt them correctly or not. It has a build-in timer that is accurate to ms's and 
+          will give you a words-per-minute result once you have finished typing as well as telling 
+          you how many words you spelt correctly or incorrectly. It also allows you to reset at 
+          anypoint and begin again.
         </p>
         <p class="features">
           Features include:
         </p>
         <ul>
           <li class="features">
-            Feature 1 description description description.
+            Timer accurate to milliseconds.
           </li>
           <li class="features">
-            Feature 2 description description description.
+            Choice of words, sentances or paragraphs to test yourself.
           </li>
           <li class="features">
-            Feature 3 description description description.
+            A words-per-minute score as well as a breakdown of how accurate you were in your spelling.
           </li>
         </ul>
         <p class="project-langs">
@@ -344,19 +352,19 @@
           <div class="slideshow-container">
 
             <div class="p6mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/Stock-Count-App" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
 
             <div class="p6mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/Stock-Count-App" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
 
             <div class="p6mySlides fade">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/THJT-9/Stock-Count-App" target="_blank" rel="noopener noreferrer">
                 <img src="./images/projects placeholder.png" class="project-img">
               </a>
             </div>
@@ -371,24 +379,37 @@
             </div>
           </div>
         </div>
-        <p class="project-name"><u>Portfolio Project 6</u></p>
+        <p class="project-name"><u>Stock Count App (WIP)</u></p>
         <p class="project-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          My current ongoing project based on my experience working at Argos. The app is designed to 
+          digitise and modernise the stock counting process, reducing paper use and speeding up counts.
+          It takes an input of the start and end locations of the count and then takes the user to an 
+          entry screen where they can input the identifier of the item and quantity. It also has a 
+          function where it can show the user all the expected items in the location and their quantities 
+          along with an image and description of the item, which is downloaded in the background without 
+          interrupting the ability to continue the count. Upon completion of the count, it will then take 
+          the user to a review page, where it displays the locations and items in those locations where 
+          the inputted quantity differs from the expected amount. The app is configured to work with the 
+          screeen size of a Zebra Handset and also designed where it can be easily reconfigured to work with
+          the stock system of other companies.
+          
+          Upcoming additions include:
+          -An Output of the completed count in a text format that can be printed or saved to an internal 
+          server.
+          -The ability to load a started but not finished count.
+          -The ability to load and look at previouslyt compelted counts.
         <p class="features">
           Features include:
         </p>
         <ul>
           <li class="features">
-            Feature 1 description description description.
+            Dynamic item viewing method, which downloads the info for new items as they are added.
           </li>
           <li class="features">
-            Feature 2 description description description.
+            Review feature to enable easy double-checking of the count.
           </li>
           <li class="features">
-            Feature 3 description description description.
+            Dynamic colour coding of items to enable an easy glance of the status of them in the count.
           </li>
         </ul>
         <p class="project-langs">
@@ -620,5 +641,4 @@
     p6slides[p6slideIndex-1].style.display = "block";  
     p6dots[p6slideIndex-1].className += " active";
   }
-
 </script>
