--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="scrolling-banner-container">
     <div class="scrolling-banner-inner" style="--marquee-speed: 30s; --effect:scroll-effect" role="marquee">
         <div class="scrolling-text">
-            <div class="scrolling-text-item">NEW PYTHON PROJECT ADDED: Morse Code Encoder/Decoder</div>
+            <div class="scrolling-text-item">NEW PYTHON PROJECT ADDED: Stock Count App</div>
         </div>
     </div>
   </div>
@@ -96,3 +96,4 @@
     </div>
 
 </footer>
+
